--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* ==> Header <== */
-.market-headerr {
+.market-header {
   color: black;
   text-align: center;
   margin-top: 4rem;
@@ -15,7 +15,7 @@
   margin-left: 30px !important;
   margin-bottom: 30px !important;
 }
-.shoes-cardd {
+.shoes-card {
   display: inline-block;
 }
 .img {
@@ -39,8 +39,8 @@
   margin-bottom: 20px;
 }
 .btn-outline-success {
-    color: orange !important;
-    border-color: orange !important;
+  color: orange !important;
+  border-color: orange !important;
 }
 
 /* ________________________________________________________________________________________________________________________________________ */
@@ -55,7 +55,90 @@
   background: rgba(224, 222, 222, 0.247) !important;
   padding: 2rem 3rem;
   margin-bottom: 6rem;
- 
 }
 
 /* ________________________________________________________________________________________________________________________________________ */
+/* ________________________________________________________________________________________________________________________________________ */
+/* ________________________________________________________________________________________________________________________________________ */
+/* ________________________________________________________________________________________________________________________________________ */
+
+/* DARK MODE */
+
+/* ==> Header <== */
+.market-headerDM {
+  color: black;
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 100px;
+  color: #ffffff;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00;
+  color: #e4e2e2e0;
+}
+
+/* _______________________________________________________________________________________________________________________________________ */
+
+/* ==> Add New Shoes CSS <== */
+
+.styleflex {
+  text-align: center;
+  background: whitesmoke;
+  padding: 10px 20px;
+  margin-bottom: 50px;
+  box-shadow: #fff 0 -1px 1px, #ff0 0 -2px 18px, #ff8000 0 0px 0px,
+    red 0 -15px 35px, 1px 4px 1px 1px rgba(0, 0, 0, 0.23);
+}
+
+/* _______________________________________________________________________________________________________________________________________ */
+
+/* ==> Card List CSS <== */
+.card {
+  display: inline-block !important;
+  width: min-content !important;
+  margin-left: 30px !important;
+  margin-bottom: 30px !important;
+}
+.img {
+  width: 243px;
+  height: 175px;
+}
+.shoes-cardDM {
+  display: inline-block;
+  box-shadow: #fff 0 -1px 1px, #ff0 0 -2px 12px, #ff8000 0 0px 0px,
+    red 0 -9px 21px, 5px 12px 1px 1px rgba(0, 0, 0, 0.23);
+}
+
+/* _______________________________________________________________________________________________________________________________________ */
+
+/* ==> Total CSS <== */
+.totalStyle {
+  padding-left: 5px;
+  display: "block";
+  background: "whitesmoke";
+  color: "black";
+  box-shadow: #fff 0 -1px 1px, #ff0 0 -2px 12px, #ff8000 0 0px 0px,
+    red 0 -9px 21px, 5px 12px 1px 1px rgba(0, 0, 0, 0.23);
+}
+
+/* ________________________________________________________________________________________________________________________________________ */
+/* ________________________________________________________________________________________________________________________________________ */
+/* ________________________________________________________________________________________________________________________________________ */
+/* ________________________________________________________________________________________________________________________________________ */
+
+/* ABOUT  */
+/* ==> HEADER <== */
+.about-header {
+  color: black;
+  text-align: center;
+  margin-top: 4.5rem;
+  margin-bottom: 4rem;
+  padding-top: 2rem;
+}
+
+.about-body {
+  text-align: justify;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  padding-left: 15px;
+  padding-right: 15px;
+}
